tests/integration/libuild/errors/excess-attrs-in-schema/error.js
module.exports = {
  msg: 'additional properties',
};
